[metadata]
description = Python Wrapper for JSBsim with ZMQ based exchange class for I/O and realtime capacities
author = Sebastien Lautier
author_email = sebastien.lautier@gmail.com
license = GPLv3
url = https://github.com/sebastien17/PyFDM

# Comma separated list of data INSIDE your package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = *.pyx , cpp/*.h
 
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python,
              Operating System :: Microsoft :: Windows :: Windows 7


[console_scripts]
# Add here console scripts like:
# hello_world = pyscaffold.module:function
#putup = pyscaffold.runner:run

[data_files]
# Add here data to be included which lies OUTSIDE your package, e.g.
# path/to/destination = files/to/include
# This is equivalent to adding files to MANIFEST.in which is not needed.
# The destination is relative to the root of your virtual environment.
pyfdm = vendors/jsbsim/mgw_build/src/libJSBSim.dll

[extras_require]
# Add here additional requirements for extra features, like:
# PDF = ReportLab>=1.2, RXP
#ALL = django, cookiecutter

[test]
# html, xml or annotate
cov-report = html
junitxml = junit.xml

[pytest]
# Options for py.test
flakes-ignore =
    doc/conf.py ALL
pep8-ignore =
    doc/conf.py ALL
